--- a/src/components/Recommender/Recommender.module.css
+++ b/src/components/Recommender/Recommender.module.css
@@ -95,3 +95,9 @@
   width: 100px;
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  .recommender-outer-container {
+    min-width: auto;
+  }
+}
