--- a/src/components/ShopButton/ShopButton.module.scss
+++ b/src/components/ShopButton/ShopButton.module.scss
@@ -21,3 +21,9 @@
     background-color: $main-green-color;
     color: #4e4e4e;
 }
+
+@media (max-width: 768px) {
+    .shop-button {
+        padding: 1.5rem;
+    }
+}
