--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,5 +1,6 @@
 .main-container {
   width: 100%;
+  padding: 2rem;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -16,4 +17,23 @@
   gap: 2rem;
   justify-items: center;
   margin-bottom: 2rem;
+}
+
+@media (max-width: 768px) {
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 0rem;
+  }
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    min-width: auto;
+    width: 100%;
+  }
 }
