--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -142,11 +142,12 @@
 
 @media (max-width: 768px) {
   .container {
-    min-height: 7rem;
+    min-height: auto;
   }
   .Navbar {
     min-width: 100%;
     height: 10rem;
+    padding: 2rem;
   }
   .Navbar .header {
     font-size: 3rem;
