--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -125,12 +125,13 @@ $main-font-color: #cbcaca;
 
 @media (max-width: 768px) {
     .container {
-        min-height: 7rem;
+        min-height: auto;
     }
 
     .Navbar {
         min-width: 100%;
         height: 10rem;
+        padding: 2rem;
 
         .header {
             font-size: 3rem;
