--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -36,3 +36,30 @@
 .sidebar ul .active {
   color: #c6d4df;
 }
+
+@media (max-width: 768px) {
+  .sidebar {
+    padding: 0;
+    margin: 2rem auto 4rem;
+    width: 100%;
+  }
+  .sidebar span {
+    font-size: 1.5rem;
+    text-align: center;
+    width: 100%;
+    border-top: none;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #66c0f4;
+  }
+  .sidebar ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-self: start;
+  }
+  .sidebar ul li {
+    justify-self: center;
+  }
+  .sidebar ul button {
+    text-align: center;
+  }
+}
