--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -171,3 +171,41 @@
 .hidden {
     display: none;
 }
+
+@media (max-width: 768px) {
+    .cart-overlay {
+        z-index: 1001;
+    }
+
+    .cart-container {
+        width: 100%;
+        height: 100%;
+        min-width: auto;
+        z-index: 1001;
+
+        .header {
+            padding: 6rem 2rem 2rem;
+        }
+
+        h2 {
+            width: 100%;
+        }
+    }
+
+    .total {
+        width: 95%;
+
+        .total-text {
+            font-size: 2rem;
+        }
+
+        .total-price {
+            font-size: 2.2rem;
+        }
+    }
+
+    .buy-btn {
+        font-size: 1.8rem;
+        padding: 1.5rem 3rem;
+    }
+}
