--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -16,7 +16,7 @@
 
 .container:hover,
 .container:active {
-  background: linear-gradient(rgba(81, 107, 131, 0.7), rgb(129, 164, 197), url(../../../public/assets/layout/product-background.jpg));
+  background: linear-gradient(rgba(81, 107, 131, 0.7), rgb(129, 164, 197), url(../../assets/layout/product-background.jpg));
   filter: brightness(1.25);
 }
 
@@ -49,7 +49,7 @@
   padding: 1rem;
 }
 .price-container .discount {
-  padding: 1rem 2rem;
+  padding: 2rem;
   font-size: 2rem;
   color: #beee11;
   background-color: #4c6b22;
