--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -19,7 +19,7 @@ $product-container-background-color: #2a475e;
     background: linear-gradient(
         rgba(81, 107, 131, 0.7),
         rgb(129, 164, 197),
-        url(../../../public/assets/layout/product-background.jpg)
+        url(../../assets/layout/product-background.jpg)
     );
     filter: brightness(1.25);
 }
@@ -46,7 +46,7 @@ $product-container-background-color: #2a475e;
     }
 
     .discount {
-        padding: 1rem 2rem;
+        padding: 2rem;
         font-size: 2rem;
         color: $main-green-color;
         background-color: $secondary-green-color;
