--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -124,10 +124,14 @@
   }
   .slider-container .slider {
     background-color: transparent;
+    height: 100%;
   }
   .slider-container .slider-inner-container {
     width: 100%;
+    height: 100%;
     border-radius: 1rem;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -137,6 +141,7 @@
   }
   .slider-container .slider-inner-container img {
     width: 100%;
+    flex: 0;
   }
   .slider-container .slider-inner-container .game-information-container {
     height: 10rem;
@@ -147,7 +152,7 @@
     gap: 0;
   }
   .slider-container .slider-inner-container .price-outer-container {
-    height: 5rem;
+    height: 6rem;
   }
   .slider-container .slider-inner-container .discount-percentage {
     font-size: 2.5rem;
@@ -157,7 +162,6 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    flex: 1;
     height: 100%;
   }
   .slider-container .slider-inner-container .price-container {
@@ -172,9 +176,9 @@
   .slider-container .slider-inner-container .buy-button {
     width: 100%;
     margin: 0 auto;
-    height: 3rem;
-    flex: 1;
     padding: 1rem;
+    height: 4rem;
+    border: none;
     display: flex;
     flex-direction: row;
     align-items: center;
