--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -113,16 +113,21 @@
 
         .slider {
             background-color: transparent;
+            height: 100%;
         }
 
         .slider-inner-container {
             width: 100%;
+            height: 100%;
             border-radius: 1rem;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
             overflow: hidden;
             @include flexBox(column, center, center, 0);
 
             img {
                 width: 100%;
+                flex: 0;
             }
 
             .game-information-container {
@@ -131,20 +136,20 @@
             }
 
             .price-outer-container {
-                height: 5rem;
+                height: 6rem;
             }
 
             .discount-percentage {
                 font-size: 2.5rem;
                 padding: 1rem;
                 @include flexBox();
-                flex: 1;
                 height: 100%;
             }
 
             .price-container {
                 font-size: 1.8rem;
                 padding: 1rem;
+
                 flex: 3;
                 height: 100%;
 
@@ -156,9 +161,9 @@
             .buy-button {
                 width: 100%;
                 margin: 0 auto;
-                height: 3rem;
-                flex: 1;
                 padding: 1rem;
+                height: 4rem;
+                border: none;
                 @include flexBox();
             }
         }
